# zipzap

./: .pre-commit-config.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
src/oba/: generate.py
