[tool.poetry]
name = "zipzap"
version = "0.1.0"
description = "Simple solution to generate and host static images"
authors = ["Altynbek Orumbayev <aorumbayev@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.1.2"
py-algorand-sdk = "^2.0.0"
imgmaker = {git = "ssh://git@github.com/aorumbayev/imgmaker.git", rev = "master"}

[tool.poetry.dev-dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
